# ChangeLog for media-video/pyqtrailer
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-video/pyqtrailer/ChangeLog,v 1.1 2010/10/12 22:05:13 sochotnicky Exp $

*pyqtrailer-0.3.4 (12 Oct 2010)

  12 Oct 2010; Stanislav Ochotnicky <sochotnicky@gentoo.org>
  +pyqtrailer-0.3.4.ebuild, +metadata.xml:
  New ebuild for pyqtrailer. Qt4 application for downloading trailers from
  apple.com.
