@@ -2,13 +2,13 @@
 Hash: SHA1
 
 DIST pyqtrailer-0.3.4.tar.gz 25235 RMD160 93c76ebed6eae17a7ee4e23190a062308345f4c9 SHA1 60a40ec896467ecf719d465b11c1ecce1bd8b986 SHA256 03f30de71cfb34de2b1e0f59a2e57635d0d4e830276f80ca0c604e5fe0c704d6
-EBUILD pyqtrailer-0.3.4.ebuild 615 RMD160 383e2a38299d41e82c12c225b24889219d47b56b SHA1 308cce08e28a674588119bcae2bb1001408e58d5 SHA256 23d151b3e29f463235fa142cf76f7df806721f0c008df53d6fafdcc30fcda6d3
-MISC ChangeLog 448 RMD160 f337a1571612ee30b9b3a859cc09daa0c6b4bebc SHA1 9c22b456ec6d60682e9b2f9846205a3f12a4e41d SHA256 a1220f44a7a395d024d7fbdd44e734de9d6c8c6ef2ee13b6f3f2a023f2e40957
+EBUILD pyqtrailer-0.3.4-r1.ebuild 647 RMD160 9663874ec237a103c0fc2d07e68aa87e84963844 SHA1 28c4f6972cd92e1d6236a2ddbf97916993a73abd SHA256 283de1f9b1869dbcf5ac074d078789b6a0e016ae686246719af206027096505d
+MISC ChangeLog 660 RMD160 369a14e316dfc835b3aa2f325126e34707006da4 SHA1 5e642b4b8b31daeaf1c004004fb1d7d16c26f333 SHA256 be88e83d487c4f18388c177a9f01f5e693670a7b9f989c21309bac1d2cec32fd
 MISC metadata.xml 227 RMD160 a5b75b64c70750674057e5401cb05910bcd516f2 SHA1 d138aec5b3633d6620e02c25403d249b30034bfe SHA256 9ccfdf28de8a3ebad00fb868ed516b74f778f86e2066b5686e62fc5d01a77c23
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.16 (GNU/Linux)
 
-iEYEARECAAYFAky027EACgkQB9Uc/HGhZ3xu2QCgi4ued7J5IiqEnGX2cKK1DybW
-NtwAn1IrfPyCgQXINXatvsad8L83uI7m
-=NYDb
+iEYEARECAAYFAky2mVQACgkQB9Uc/HGhZ3wsxgCfZB4x6g1yMRYqVPE+VuCqbnrZ
+/xYAoKmtlGtqTfC2jK/dyRTCeXmrth/q
+=IdRh
 -----END PGP SIGNATURE-----
