@@ -1,6 +1,12 @@
 # ChangeLog for media-video/pyqtrailer
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-video/pyqtrailer/ChangeLog,v 1.1 2010/10/12 22:05:13 sochotnicky Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-video/pyqtrailer/ChangeLog,v 1.2 2010/10/14 05:46:31 sochotnicky Exp $
+
+*pyqtrailer-0.3.4-r1 (14 Oct 2010)
+
+  14 Oct 2010; Stanislav Ochotnicky <sochotnicky@gentoo.org>
+  -pyqtrailer-0.3.4.ebuild, +pyqtrailer-0.3.4-r1.ebuild:
+  Added dev-python/python-dateutil to DEPEND (bz#340871)
 
 *pyqtrailer-0.3.4 (12 Oct 2010)
 
